<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:visible="false"
        android:id="@+id/group_main">

        <item
            android:id="@+id/menu_share"
            android:title="@string/action_share" />

        <item
            android:id="@+id/menu_duplicate"
            android:title="@string/action_duplicate" />

        <item
            android:id="@+id/menu_delete"
            android:icon="@drawable/ic_delete_outline_24px"
            app:showAsAction="always"
            android:title="@string/action_delete" />

    </group>

    <group
        android:visible="false"
        android:id="@+id/group_trash">

        <item
            android:id="@+id/menu_restore"
            android:visible="false"
            android:icon="@drawable/ic_restore_24px"
            app:showAsAction="always"
            android:title="@string/action_restore" />

        <item
            android:id="@+id/menu_delete_forever"
            android:visible="false"
            android:icon="@drawable/ic_delete_forever_24px"
            app:showAsAction="always"
            android:title="@string/action_delete_forever" />

    </group>

</menu>