<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_check_all"
        android:icon="@drawable/ic_select_all_24px"
        app:showAsAction="always"
        android:visible="false"
        android:title="@string/action_select_all"/>

    <item
        android:id="@+id/menu_complete"
        android:icon="@drawable/ic_done_all_24px"
        app:showAsAction="always"
        android:title="@string/action_undo_complete" />

    <item
        android:id="@+id/menu_move_to_list"
        android:icon="@drawable/ic_move_to_inbox_24px"
        app:showAsAction="always"
        android:title="@string/action_move_to_list"/>

    <item
        android:id="@+id/menu_delete"
        android:icon="@drawable/ic_delete_outline_24px"
        app:showAsAction="always"
        android:title="@string/action_delete" />

</menu>