<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.edit_list.EditListActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppThemeDark.PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
        android:orientation="vertical"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.axel_stein.tasktracker.views.IconTextView
                android:id="@+id/text_date"
                android:textSize="16sp"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:drawablePadding="16dp"
                android:ellipsize="end"
                android:gravity="center_vertical"
                android:maxLines="1"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:hint="@string/hint_set_date"
                app:iconLeft="@drawable/ic_event_24px"
                app:iconLeftTint="?attr/colorControlNormal"
                app:iconRightTint="?attr/colorAccent" />

            <ImageButton
                android:id="@+id/btn_clear_date"
                style="@style/Widget.AppCompat.Toolbar.Button.Navigation"
                android:visibility="gone"
                tools:visibility="visible"
                android:layout_width="?attr/actionBarSize"
                android:layout_height="match_parent"
                android:src="@drawable/ic_clear_white_24px"
                android:tint="?attr/menuItemTintColor"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.axel_stein.tasktracker.views.IconTextView
                android:id="@+id/text_time"
                android:textSize="16sp"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:drawablePadding="16dp"
                android:ellipsize="end"
                android:gravity="center_vertical"
                android:maxLines="1"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:hint="@string/hint_set_time"
                app:iconLeft="@drawable/ic_access_time_24px"
                app:iconLeftTint="?attr/colorControlNormal"
                app:iconRightTint="?attr/colorAccent" />

            <ImageButton
                android:id="@+id/btn_clear_time"
                style="@style/Widget.AppCompat.Toolbar.Button.Navigation"
                android:visibility="gone"
                tools:visibility="visible"
                android:layout_width="?attr/actionBarSize"
                android:layout_height="match_parent"
                android:src="@drawable/ic_clear_white_24px"
                android:tint="?attr/menuItemTintColor"/>

        </LinearLayout>

        <com.axel_stein.tasktracker.views.IconTextView
            android:id="@+id/text_repeat"
            android:textSize="16sp"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:drawablePadding="16dp"
            android:ellipsize="end"
            android:gravity="center_vertical"
            android:maxLines="1"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:visibility="visible"
            app:iconLeft="@drawable/ic_replay_24px"
            app:iconLeftTint="?attr/colorControlNormal"
            app:iconRightTint="?attr/colorAccent" />

        <LinearLayout
            android:id="@+id/layout_edit_repeat"
            android:clickable="true"
            android:focusable="true"
            android:background="?attr/selectableItemBackground"
            android:orientation="horizontal"
            android:visibility="gone"
            tools:visibility="visible"
            android:layout_width="match_parent"
            android:layout_height="48dp">

            <com.axel_stein.tasktracker.views.IconTextView
                android:textSize="16sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="16dp"
                android:ellipsize="end"
                android:layout_gravity="center_vertical"
                android:maxLines="1"
                android:paddingStart="16dp"
                android:paddingEnd="0dp"
                android:visibility="visible"
                tools:visibility="visible"
                android:text="@string/repeat_every"
                app:iconLeft="@drawable/ic_replay_24px"
                app:iconLeftTint="?attr/colorControlNormal"
                app:iconRightTint="?attr/colorAccent" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_repeat_count"
                tools:text=""
                android:gravity="center_horizontal"
                android:textSize="16sp"
                android:minWidth="48dp"
                android:inputType="numberDecimal"
                android:maxLines="1"
                android:maxLength="5"
                android:layout_gravity="center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/text_repeat_period"
                tools:text="days"
                android:textSize="16sp"
                android:textColor="?android:attr/textColorPrimary"
                android:layout_gravity="center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>

        <com.axel_stein.tasktracker.views.IconTextView
            android:id="@+id/text_repeat_end"
            android:textSize="16sp"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:drawablePadding="16dp"
            android:ellipsize="end"
            android:gravity="center_vertical"
            android:maxLines="1"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:visibility="gone"
            tools:visibility="visible"
            tools:text="24 May"
            app:iconLeft="@drawable/ic_event_busy_24px"
            app:iconLeftTint="?attr/colorControlNormal"
            app:iconRightTint="?attr/colorAccent" />

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>